--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -38,8 +38,8 @@
 
   <properties>
     <neo4j.version>2.0.0</neo4j.version>
-    <spray.version>1.2.0</spray.version>
-    <akka.version>2.2.3</akka.version>
+    <spray.version>1.3.1</spray.version>
+    <akka.version>2.3.0</akka.version>
   </properties>
 
   <dependencies>
@@ -156,6 +156,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.0.9</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.extendedmind</groupId>
+      <artifactId>logback-mongodb-appender</artifactId>
+      <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
