--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
       <name>Spray.io Nightly Repository</name>
       <url>http://nightlies.spray.io/</url>
     </repository>
+    <repository>
+      <id>extendedmind-releases</id>
+      <name>Extended Mind Releases</name>
+      <url>https://ci.ext.md/nexus/content/repositories/releases</url>
+    </repository>
+    <repository>
+      <id>extendedmind-snapshots</id>
+      <name>Extended Mind Snapshots</name>
+      <url>https://ci.ext.md/nexus/content/repositories/snapshots</url>
+    </repository>
 
   </repositories>
 
