--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.extendedmind</groupId>
     <artifactId>root</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0-SNAPSHOT</version>
   </parent>
   <artifactId>backend</artifactId>
   <packaging>jar</packaging>
@@ -37,7 +37,7 @@
   </developers>
 
   <properties>
-    <neo4j.version>2.0.0</neo4j.version>
+    <neo4j.version>2.0.1</neo4j.version>
     <spray.version>1.3.1</spray.version>
     <akka.version>2.3.0</akka.version>
   </properties>
@@ -91,21 +91,21 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-scala</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${neo4j.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-uuid</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${neo4j.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-timestamp</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${neo4j.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
