--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,20 @@
   </profiles>
 
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+      <plugin>
+          <artifactId>maven-scm-plugin</artifactId>
+          <version>1.9</version>
+          <configuration>
+          <tag>${project.version}</tag>
+        </configuration>
+      </plugin>      
+    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
