Added version to backend, returned on call to root

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -3,6 +3,7 @@
 # This file needs to be overridden in production with "-Dconfig.file=[]".
 
 extendedmind {
+  version = ${project.version}
   neo4j {
     storeDir = "target/neo4j-test"
     isHighAvailability = false
