Updated invitation email

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -48,7 +48,7 @@ extendedmind {
       # directory = "custom_email_template_directory"
       requestInviteConfirmationTitle = "get ready to extend your mind"
       requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
-      acceptInviteRequestTitle = "the wait is over"
+      acceptInviteRequestTitle = "invitation to join the extended mind"
       acceptInviteURI = "accept/inviteValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
       resetPasswordURI = "reset/resetCodeValue?email=emailValue"
