Beginnings of automatic/coupon invitations

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -20,8 +20,12 @@ extendedmind {
     # Possible values:
     #   OFF: sign up is not possible at all
     #   INVITE: sign up is possible with only invite
+    #   INVITE_COUPON: sign up possible either with invite or with special coupon
+    #   INVITE_AUTOMATIC: sign up using automatic inviting when requested when posting
     #   ON: sign up is possible with both invite and call to /signup
     signUpMethod = "ON"
+    
+    # signUpCode = "secretInviteCode"
     
     # Sign up mode, what kinds of users are created when signing up.
     # Possible values:
