Undebugged version, new features not interfering with previous functionality

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -20,12 +20,12 @@ extendedmind {
     # Possible values:
     #   OFF: sign up is not possible at all
     #   INVITE: sign up is possible with only invite
-    #   INVITE_COUPON: sign up possible either with invite or with special coupon
+    #   INVITE_COUPON: sign up possible either with invite or with special coupon defined below with signUpCoupon
     #   INVITE_AUTOMATIC: sign up using automatic inviting when requested when posting
     #   ON: sign up is possible with both invite and call to /signup
     signUpMethod = "ON"
     
-    # signUpCode = "secretInviteCode"
+    # signUpCoupon = "secretInviteCoupon"
     
     # Sign up mode, what kinds of users are created when signing up.
     # Possible values:
@@ -43,7 +43,7 @@ extendedmind {
       domain = "ext.md"
       apiKey = "TEST KEY"
     }
-    from = "extended mind <info@ext.md>"
+    from = "extended mind <support@ext.md>"
     # URL for non-secure and secure pages
     urlPrefix = "http://localhost/landing/"
     secureUrlPrefix = "http://localhost/"
@@ -56,6 +56,8 @@ extendedmind {
       acceptInviteURI = "accept/inviteValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
       resetPasswordURI = "reset/resetCodeValue?email=emailValue"
+      verifyEmailTitle = "verify your email address"
+      verifyEmailURI = "verify/verifyCodeValue?email=emailValue"
     }
   }
 }
