Working email verification, sign up using coupon code, automatic signup

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -25,7 +25,8 @@ extendedmind {
     #   ON: sign up is possible with both invite and call to /signup
     signUpMethod = "ON"
     
-    # signUpCoupon = "secretInviteCoupon"
+    # Needed for INVITE_COUPON
+    # signUpCoupon = "123"
     
     # Sign up mode, what kinds of users are created when signing up.
     # Possible values:
