CordovaLib update to build properties

--- a/frontend/phonegap/app/platforms/android/project.properties
+++ b/frontend/phonegap/app/platforms/android/project.properties
@@ -19,3 +19,6 @@ android.library.reference.4=CordovaLib
 android.library.reference.5=CordovaLib
 android.library.reference.6=CordovaLib
 android.library.reference.7=CordovaLib
+android.library.reference.8=CordovaLib
+android.library.reference.9=CordovaLib
+android.library.reference.10=CordovaLib
