--- a/frontend/phonegap/app/platforms/ios/em.xcodeproj/xcshareddata/xcschemes/em.xcscheme
+++ b/frontend/phonegap/app/platforms/ios/em.xcodeproj/xcshareddata/xcschemes/em.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-               BuildableName = "em.app"
+               BuildableName = "extmd.app"
                BlueprintName = "em"
                ReferencedContainer = "container:em.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "em.app"
+            BuildableName = "extmd.app"
             BlueprintName = "em"
             ReferencedContainer = "container:em.xcodeproj">
          </BuildableReference>
@@ -52,7 +52,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "em.app"
+            BuildableName = "extmd.app"
             BlueprintName = "em"
             ReferencedContainer = "container:em.xcodeproj">
          </BuildableReference>
@@ -70,7 +70,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-            BuildableName = "em.app"
+            BuildableName = "extmd.app"
             BlueprintName = "em"
             ReferencedContainer = "container:em.xcodeproj">
          </BuildableReference>
@@ -92,7 +92,7 @@
                   <BuildableReference
                      BuildableIdentifier = "primary"
                      BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
-                     BuildableName = "em.app"
+                     BuildableName = "extmd.app"
                      BlueprintName = "em"
                      ReferencedContainer = "container:em.xcodeproj">
                   </BuildableReference>
