--- a/frontend/cordova/pom.xml
+++ b/frontend/cordova/pom.xml
@@ -187,6 +187,19 @@
             </configuration>
           </execution>
           <execution>
+            <id>cordova-ios-prepare</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <skip>${skipIos}</skip>
+              <executable>sh</executable>
+              <commandlineArgs>prepare-ios.sh</commandlineArgs>
+              <background>false</background>
+            </configuration>
+          </execution>
+          <execution>
             <id>cordova-ios-build</id>
             <phase>compile</phase>
             <goals>
