Added possibility to set bundle id to nightly with '-Dcordova.bundleId=org.extendedmind.nightly' and override default build number 0 with '-Dcordova.buildNumber=12345'

--- a/frontend/cordova/pom.xml
+++ b/frontend/cordova/pom.xml
@@ -36,6 +36,8 @@
     <encoding>UTF-8</encoding>
     <skipAndroid>true</skipAndroid>
     <skipIos>true</skipIos>
+    <cordova.bundleId>org.extendedmind</cordova.bundleId>
+    <cordova.buildNumber>0</cordova.buildNumber>
   </properties>
 
   <profiles>
