--- a/frontend/cordova/src/main/resources/ios/extmd-Info.plist
+++ b/frontend/cordova/src/main/resources/ios/extmd-Info.plist
@@ -49,7 +49,7 @@
       </dict>
     </dict>
     <key>CFBundleIdentifier</key>
-    <string>org.extendedmind</string>
+    <string>${cordova.bundleId}</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
@@ -59,7 +59,7 @@
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>0</string>
+    <string>${cordova.buildNumber}</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSMainNibFile</key>
