IScroll scroller in containers with accordion:  * scroll to opened accordion item and focused add item... input field  * changed iscroll.js to iscroll-probe.js to get the current scroll position  * public swipeNext and swipePrevious methods in SwiperService  * optional scope.disableSwiper parameter in swiperContainerDirective to initially disable swiping in slides with scroller  * accordionTitleDirective calls refresh scroller (and scroll to element) methdod in accordionDirective after toggle to recalculate container height  * register focused add item... element to scrollToDirective and scroll to focused element after new item addition  * initialize scrollToItems scope variable in ng-repeats and watch its size changes to refresh scroller height  * fire scrollerIncludeContentLoaded on ng-include onload events and refresh scroller  * scrollToContainerDirective to register scrollers within same feature  * scrollTo<Top|Bottom>Edge directives for generic pull to next/previous loaders

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -163,7 +163,7 @@
             <source>jsonFixtures.js</source>
           </preloadSources>
           <sourceIncludes>
-            <include>lib/iscroll.js</include>
+            <include>lib/iscroll-probe.js</include>
             <include>lib/jquery/jquery.js</include>
             <include>lib/angularjs/angular.js</include>
             <include>lib/angularjs/angular-animate.js</include>
