Implemented history synchronization from the backend. Archive and dashboard now initially working.

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -168,6 +168,7 @@
             <include>lib/angularjs/angular-animate.js</include>
             <include>lib/angularjs/angular-mocks.js</include>
             <include>lib/angularjs/angular-route.js</include>
+            <include>lib/angularjs/ngInfiniteScroll.js</include>
             <include>lib/base64.js</include>
             <include>lib/fastclick.js</include>
             <include>lib/snap.js</include>
