Swapped expanding textarea plugin to Angular Elastic https://github.com/monospaced/angular-elastic which works without timeouting.

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -170,6 +170,7 @@
             <include>lib/angularjs/angular-route.js</include>
             <include>lib/angularjs/ngInfiniteScroll.js</include>
             <include>lib/base64.js</include>
+            <include>lib/elastic.js</include>
             <include>lib/fastclick.js</include>
             <include>lib/snap.js</include>
             <include>app/*.js</include>
