--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -189,7 +189,7 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.lesscss</groupId>
+        <groupId>org.extendedmind</groupId>
         <artifactId>lesscss-maven-plugin</artifactId>
         <version>1.7.4.1.0</version>
         <executions>
