Added maximum lenght of line into JSHint configuration.

--- a/frontend/core/src/main/webapp/static/.jshintrc
+++ b/frontend/core/src/main/webapp/static/.jshintrc
@@ -24,5 +24,6 @@
   "sub"           : true,
   "trailing"      : true,
   "undef"         : true,
-  "unused"        : true
+  "unused"        : true,
+  "maxlen"        : 110
 }
