--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -172,6 +172,7 @@
             <include>lib/base64.js</include>
             <include>lib/elastic.js</include>
             <include>lib/fastclick.js</include>
+            <include>lib/clamp.js</include>
             <include>app/*.js</include>
             <include>common/common.js</include>
             <include>common/*.js</include>
