Working about page

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -169,6 +169,7 @@
             <include>lib/angularjs/angular-mocks.js</include>
             <include>lib/angularjs/angular-route.js</include>
             <include>lib/angularjs/angular-messages.js</include>
+            <include>lib/angularjs/angular-sanitize.js</include>
             <include>lib/base64.js</include>
             <include>lib/elastic.js</include>
             <include>lib/fastclick.js</include>
