--- a/frontend/cordova/src/main/resources/ios/extmd-Info.plist
+++ b/frontend/cordova/src/main/resources/ios/extmd-Info.plist
@@ -9,20 +9,30 @@
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIconFile</key>
-    <string>icon.png</string>
+    <string>Icon.png</string>
     <key>CFBundleIcons</key>
     <dict>
       <key>CFBundlePrimaryIcon</key>
       <dict>
         <key>CFBundleIconFiles</key>
         <array>
-          <string>icon-40</string>
-          <string>icon-small</string>
-          <string>icon-60</string>
-          <string>icon.png</string>
-          <string>icon@2x</string>
-          <string>icon-72</string>
-          <string>icon-72@2x</string>
+          <string>Icon</string>
+          <string>Icon-60@2X</string>
+          <string>Icon-76</string>
+          <string>Icon-76@2x</string>
+          <string>Icon-Small-40</string>
+          <string>Icon-Small-40@2x</string>
+          <string>Icon-Small</string>
+          <string>Icon-Small@2x</string>
+          <string>Icon@2x</string>
+          <string>Icon-72</string>
+          <string>Icon-72@2x</string>
+          <string>Icon-Small-50</string>
+          <string>Icon-Small-50@2x</string>
+          <string>Icon-60@3x</string>
+          <string>Icon-Small-40@3x</string>
+          <string>Icon-Small@3x</string>
+          <string>Icon-60</string>
         </array>
         <key>UIPrerenderedIcon</key>
         <false/>
@@ -34,15 +44,16 @@
       <dict>
         <key>CFBundleIconFiles</key>
         <array>
-          <string>icon-small</string>
-          <string>icon-40</string>
-          <string>icon-50</string>
-          <string>icon-76</string>
-          <string>icon-60</string>
-          <string>icon</string>
-          <string>icon@2x</string>
-          <string>icon-72</string>
-          <string>icon-72@2x</string>
+          <string>Icon-76</string>
+          <string>Icon-76@2x</string>
+          <string>Icon-Small-40</string>
+          <string>Icon-Small-40@2x</string>
+          <string>Icon-Small</string>
+          <string>Icon-Small@2x</string>
+          <string>Icon-72</string>
+          <string>Icon-72@2x</string>
+          <string>Icon-Small-50</string>
+          <string>Icon-Small-50@2x</string>
         </array>
         <key>UIPrerenderedIcon</key>
         <false/>
