--- a/frontend/cordova/src/main/resources/ios/extmd-Info.plist
+++ b/frontend/cordova/src/main/resources/ios/extmd-Info.plist
@@ -16,17 +16,13 @@
       <dict>
         <key>CFBundleIconFiles</key>
         <array>
-          <string>Icon</string>
-          <string>Icon-60@2X</string>
-          <string>Icon-76</string>
-          <string>Icon-76@2x</string>
-          <string>Icon-Small-40</string>
-          <string>Icon-Small-40@2x</string>
-          <string>Icon-Small</string>
-          <string>Icon-Small@2x</string>
-          <string>Icon@2x</string>
-          <string>Icon-72</string>
-          <string>Icon-72@2x</string>
+          <string>icon-40</string>
+          <string>icon-small</string>
+          <string>icon-60</string>
+          <string>icon.png</string>
+          <string>icon@2x</string>
+          <string>icon-72</string>
+          <string>icon-72@2x</string>
           <string>Icon-Small-50</string>
           <string>Icon-Small-50@2x</string>
           <string>Icon-60@3x</string>
@@ -44,16 +40,15 @@
       <dict>
         <key>CFBundleIconFiles</key>
         <array>
-          <string>Icon-76</string>
-          <string>Icon-76@2x</string>
-          <string>Icon-Small-40</string>
-          <string>Icon-Small-40@2x</string>
-          <string>Icon-Small</string>
-          <string>Icon-Small@2x</string>
-          <string>Icon-72</string>
-          <string>Icon-72@2x</string>
-          <string>Icon-Small-50</string>
-          <string>Icon-Small-50@2x</string>
+          <string>icon-small</string>
+          <string>icon-40</string>
+          <string>icon-50</string>
+          <string>icon-76</string>
+          <string>icon-60</string>
+          <string>icon</string>
+          <string>icon@2x</string>
+          <string>icon-72</string>
+          <string>icon-72@2x</string>
         </array>
         <key>UIPrerenderedIcon</key>
         <false/>
