--- a/frontend/cordova/src/main/resources/ios/extmd-Info.plist
+++ b/frontend/cordova/src/main/resources/ios/extmd-Info.plist
@@ -23,11 +23,11 @@
           <string>icon@2x</string>
           <string>icon-72</string>
           <string>icon-72@2x</string>
-          <string>Icon-Small-50@2x</string>
-          <string>Icon-60@3x</string>
-          <string>Icon-Small-40@3x</string>
-          <string>Icon-Small@3x</string>
-          <string>Icon-60</string>
+          <string>icon-Small-50@2x</string>
+          <string>icon-60@3x</string>
+          <string>icon-Small-40@3x</string>
+          <string>icon-Small@3x</string>
+          <string>icon-60</string>
         </array>
         <key>UIPrerenderedIcon</key>
         <false/>
