Fixed cordova index.html paths

--- a/frontend/cordova/pom.xml
+++ b/frontend/cordova/pom.xml
@@ -239,6 +239,9 @@
               <directory>${basedir}/app/plugins</directory>
             </fileset>
             <fileset>
+              <directory>${basedir}/app/merges</directory>
+            </fileset>
+            <fileset>
               <directory>${basedir}/app/www</directory>
             </fileset>
             <fileset>
