--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -292,6 +292,26 @@
                       </resources>
                   </configuration>
               </execution>
+              <execution>
+                  <id>copy-store-icons</id>
+                  <phase>prepare-package</phase>
+                  <goals>
+                      <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>${project.basedir}/src/main/webapp/static/img</outputDirectory>
+                      <overwrite>true</overwrite>
+                      <resources>
+                          <resource>
+                              <directory>${project.basedir}/src/main/webapp/landing/img</directory>
+                              <includes>
+                                  <include>appstore.png</include>
+                                  <include>playstore.png</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </configuration>
+              </execution>
           </executions>
       </plugin>
     </plugins>
