Added better favicons to landing page and web page

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ target/
 frontend/core/src/main/webapp/test/json/
 frontend/core/src/main/webapp/static/em.min.js
 frontend/core/src/main/webapp/static/css
-frontend/core/src/main/webapp/static/favicon.ico
+frontend/core/src/main/webapp/static/favicon/
 frontend/core/src/main/webapp/static/img/
 
 # Ignore PhantomJS logs
