Added analytics test data folder to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ frontend/cordova/app/www
 frontend/cordova/app/config.xml
 frontend/cordova/app/merges
 
+# Analytics
+frontend/core/src/main/webapp/analytics/data/
+
