--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -198,6 +198,8 @@
             <include>lib/elastic.js</include>
             <include>lib/fastclick.js</include>
             <include>lib/clamp.js</include>
+            <include>lib/lawnchair/lawnchair.js</include>
+            <include>lib/lawnchair/lawnchair-memory.js</include>
             <include>app/*.js</include>
             <include>common/common.js</include>
             <include>common/*.js</include>
