Fixed when deleting and undeleting list or tag to also update the modified timestamp of connected items

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,7 +105,7 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-timestamp</artifactId>
-      <version>${neo4j.version}</version>
+      <version>${neo4j.version}.1</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
