--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -251,6 +251,17 @@
         <artifactId>wro4j-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>wro4j-angularjs</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <targetGroups>em.angularjs.min</targetGroups>
+              <wroManagerFactory>ro.isdc.wro.extensions.manager.standalone.GoogleStandaloneManagerFactory</wroManagerFactory>
+            </configuration>
+          </execution>
+          <execution>
             <id>wro4j-production</id>
             <phase>prepare-package</phase>
             <goals>
@@ -258,12 +269,12 @@
             </goals>
             <configuration>
               <targetGroups>em.min</targetGroups>
+              <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
             </configuration>
           </execution>
         </executions>
         <configuration>
           <contextFolder>${basedir}</contextFolder>
-          <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
           <destinationFolder>${basedir}/src/main/webapp/static</destinationFolder>
           <jsDestinationFolder>${basedir}/src/main/webapp/static/</jsDestinationFolder>
         </configuration>
